# ijsongenerators

./: .gitignore  README.md  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/ijsongenerators/: __init__.py  aliases.py
src/tests/: test_ijsongenerators.py
