[metadata]
name = ijsongenerators
version = 0.1.0
description = Library to make ijson return nested generators into the JSON stream
author = Simon Engledew
license = MIT

[options]
zip_safe = True
package_dir=
  =src
packages=find:

install_requires =
  ijson

[options.packages.find]
exclude = tests
where = src

[options.extras_require]
test =
  coverage
  pytest
  pytest-cov

dev =
  black
  isort
  autoflake

[bdist_wheel]
universal = 1
