[metadata]
name = ijsongenerators
version = 1.0.0
description = Library to make ijson return nested generators into the JSON stream
author = Simon Engledew
license = MIT

[options]
zip_safe = True
package_dir=
  =src
packages=find:

install_requires =
  ijson

[options.packages.find]
exclude = tests
where = src

[options.extras_require]
test =
  coverage
  pytest
  pytest-cov

dev =
  black
  isort
  autoflake
  wheel
  twine

docs =
  sphinx
  sphinx_rtd_theme
  sphinx-autodoc-typehints

[bdist_wheel]
universal = 1
